--- a/services/dashboard/app/index.html
+++ b/services/dashboard/app/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AirQualityInsight - Dashboard</title>
+
+    <link rel="icon" type="image/x-icon" href="/public/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/public/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/public/android-chrome-512x512.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <link
       rel="stylesheet"
       href="./src/assets/fontawesome-free-6.7.2-web/css/all.min.css"
